--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sample HTML</title>
 </head>
 <body>
-    <h1>Hello HTML</h1>
+    <h1>Hello HTML!!!</h1>
+    <p>Nice to see you</p>
+    <img src="img/more-1.jpg" alt="more-1">
 </body>
 </html>
